# GH-ICP

./: CMakeLists.txt
include/: cloud_viewer.hpp
script/: run.sh
src/: ghicp_reg.cpp
test/: ghicp_main.cpp
