cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(GHICP)

set(ENV{CC} gcc-4.6)
set(ENV{CXX} g++-4.6)

SET(CMAKE_CXX_FLAGS "-O3 -std=c++11 -w -fopenmp -pthread")
SET(CMAKE_C_FLAGS "-O3 -std=c++11 -fopenmp -pthread")

#SET(CMAKE_BUILD_TYPE "Debug")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#PCL
FIND_PACKAGE(PCL REQUIRED)
IF(PCL_FOUND) 
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})
LIST(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
message("PCL [OK]")
ENDIF(PCL_FOUND)
find_package(Boost REQUIRED)

#libLas
FIND_PACKAGE(libLAS REQUIRED)
IF(libLAS_FOUND) 
MESSAGE("LibLAS is found:"${LIBLAS_INCLUDE_DIR}) 
INCLUDE_DIRECTORIES(${LIBLAS_INCLUDE_DIR}
		    ${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBLAS_LIBS})
LINK_LIBRARIES("/usr/local/lib/liblas.so.2.4.0")
ENDIF(libLAS_FOUND)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

#Head
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
message("SRC_LIST is " ${SRC_LIST})

SET(DEP_LIBS ${DEP_LIBS} ${PCL_LIBRARIES} ${LibLAS_LIBRARIES} ${Boost_LIBRARIES})

#ADD_EXECUTABLE(ghicp test/ghicp_main.cpp)
ADD_EXECUTABLE(ghicp test/ghicp_main.cpp ${SRC_LIST})
TARGET_LINK_LIBRARIES(ghicp ${DEP_LIBS})



